2016-04-07 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCC.lex,
	  src/SDCCerr.h,
	  src/SDCCerr.c:
	  Fix bug #2488 by implementing hexadecimal floating constants.

2016-04-06 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/string.c:
	  Check more of wide strings, do not depend on implementation-defined behaviour in char escape.

2016-04-06 Ben Shi <powerstudio1st AT 163 DOT com>

	* support/regression/tests/gcc-torture-execute-950512-1.c
	* support/regression/tests/gcc-torture-execute-961122-1.c
	* support/regression/tests/gcc-torture-execute-960402-1.c
	  Enabled.

2016-04-05 Ben Shi <powerstudio1st AT 163 DOT com>

	* support/regression/tests/string.c
	  Improve test case.
	* src/SDCCast.c
	* src/SDCCicode.c
	* src/z80/gen.c
	  Improve longlong compatibility.

2016-04-03 Molnar Karoly <molnarkaroly AT users.sf.net>

	* device/lib/pic14/bootstrap.sh,
	  device/lib/pic14/Makefile.in,
	  device/lib/pic14/libm/Makefile.in,
	  device/lib/pic14/libsdcc/enhanced/Makefile.am,
	  device/lib/pic14/libsdcc/enhanced/Makefile.in,
	  device/lib/pic14/libsdcc/enhanced-no-xinst/Makefile.am,
	  device/lib/pic14/libsdcc/enhanced-no-xinst/Makefile.in,
	  device/lib/pic14/libsdcc/regular/Makefile.am,
	  device/lib/pic14/libsdcc/regular/Makefile.in:
	  Workaround the Linux Mint bug: #2482 Link error with pic16f1827

	* device/lib/pic16/*,
	  device/non-free/lib/pic16/*:
	  Downgraded the autoconf version from 1.15 to 1.11.6.

2016-04-01 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCglue.c,
	  src/SDCCval.c:
	  Support wide string literals in initialization of global arrays.
	* src/SDCCast.c,
	  Support wide string literals in initialization of local arrays.
	* doc/sdccman.lyx:
	  Update documentation on standard compliance.

2016-04-01 Ben Shi <powerstudio1st AT 163 DOT com>
	* support/regression/tests/gcc-torture-execute-950512-1.c
	  Enabled.
	* src/z80/gen.c
	  Improve longlong comptability on different hosts.
